syntax="proto3";

package pb;

enum BookClass {
  b_class_A = 0;
  b_class_B = 1;
  b_class_C = 2;
}

message BookInfo {
  int32   book_id = 1;
  string  book_name = 2;
  float   book_price = 3;
  BookClass bool_class = 4;
}

message BookDetail {
  int32   book_id = 1;
  string  book_name = 2;
  string  book_author = 3;
  int32   book_page = 4;
}

message BookListRequest {
  int32 page_num = 1;
  int32 per_page = 2;
}

message BookListResponse {
  repeated BookInfo book_info = 1;
}

message BookDetailRequest {
  int32 book_id = 1;
}

message BookDetailResponse {
  BookDetail book_detail = 1;
}

service BookService {
  rpc GetBookList(BookListRequest) returns (BookListResponse);
  rpc GetBookInfo(BookDetailRequest) returns (BookDetailResponse);
}